kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - homework.otus
    secretName: homework-tls
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
      - path: /metrics
        pathType: ImplementationSpecific
        backend:
          service:
            name: homework-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
